# docs/swagger.json
@@ -4,23 +4,44 @@
         "contact": {}
     },
     "paths": {
-        "/accounts/{id}": {
+        "/api/users/getuser": {
             "get": {
-                "description": "get string by ID",
+                "description": "Show User ตามเงื่อนไข",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Show a account",
-                "operationId": "get-string-by-int",
+                "tags": [
+                    "User"
+                ],
+                "summary": "ค้นหา User ตามเงื่อนไข",
                 "parameters": [
                     {
+                        "type": "string",
+                        "name": "created_at",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "email",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
-                        "description": "Account ID",
                         "name": "id",
-                        "in": "path",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "updated_at",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "username",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -28,25 +49,28 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Account"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.User"
+                            }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.HTTPError"
+                            "$ref": "#/definitions/schema.HTTPError"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/main.HTTPError"
+                            "$ref": "#/definitions/schema.HTTPError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.HTTPError"
+                            "$ref": "#/definitions/schema.HTTPError"
                         }
                     }
                 }
@@ -95,16 +119,25 @@
         }
     },
     "definitions": {
-        "main.Account": {
+        "models.User": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
                 "id": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
-        },
-        "main.HTTPError": {
-            "type": "object"
         },
         "schema.HTTPError": {
             "type": "object"
