# internal/app/entities/schema/schema_user.go
@@ -15,9 +15,9 @@ type UserResponse struct {
 }
 
 type UserRequest struct {
-	ID        int    `json:"id"`
-	Username  string `json:"username"`
-	Email     string `json:"email"`
-	CreatedAt string `json:"created_at"`
-	UpdatedAt string `json:"updated_at"`
+	ID        int    `query:"id" json:"id"`
+	Username  string `query:"username" json:"username" validate:"required"`
+	Email     string `query:"email" json:"email"`
+	CreatedAt string `query:"created_at" json:"created_at"`
+	UpdatedAt string `query:"updated_at" json:"updated_at"`
 }
