# main.go
@@ -6,7 +6,6 @@ import (
 	"log"
 
 	swagger "github.com/arsmn/fiber-swagger/v2"
-	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/valyala/fasthttp"
 
@@ -16,7 +15,6 @@ import (
 	"eql/internal/infrastructures/gofiber"
 )
 
-//go:embed files/swagger.json
 var swaggerJSON []byte
 
 func main() {
@@ -34,6 +32,7 @@ func main() {
 	docs.SwaggerInfo.Title = "EQL-SYSTEM"
 	docs.SwaggerInfo.Description = "Test"
 	docs.SwaggerInfo.Version = "0.1"
+
 	// กำหนดรายละเอียดของส่วน auth Bearer
 	// @securityDefinitions.apikey ApiKeyAuth
 	// @name Authorization
@@ -43,7 +42,6 @@ func main() {
 	// เพิ่ม middleware สำหรับการเข้าถึง Swagger UI
 	// เพิ่ม middleware สำหรับการเข้าถึง Swagger UI ด้วยควบคุมสิทธิ์
 	app.Get("/swagger/*", swagger.New(swagger.Config{}))
-	app.Get("/accounts/:id", ShowAccount)
 	router.SetupRouter(app, c) //เรียก router ต่างๆ
 
 	err = app.Listen(fmt.Sprintf(":%v", conf.AppConfig.Port))
@@ -51,31 +49,4 @@ func main() {
 		log.Fatalf("Error running server T^T: %s", err.Error())
 	}
 
-}
-
-// ShowAccount godoc
-// @Summary Show a account
-// @Description get string by ID
-// @ID get-string-by-int
-// @Accept  json
-// @Produce  json
-// @Param id path int true "Account ID"
-// @Success 200 {object} Account
-// @Failure 400 {object} HTTPError
-// @Failure 404 {object} HTTPError
-// @Failure 500 {object} HTTPError
-// @Router /accounts/{id} [get]
-func ShowAccount(c *fiber.Ctx) error {
-	return c.JSON(Account{
-		Id: c.Params("id"),
-	})
-}
-
-type Account struct {
-	Id string
-}
-
-type HTTPError struct {
-	status  string
-	message string
 }
